# dotdotdot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  usage_notes.txt
engine/: block.cpp  block.h  grid.cpp  grid.h  particle.cpp  particle.h  utils.cpp  utils.h
engine/geometry/: line.cpp  line.h  point.cpp  triangle.cpp  triangle.h
examples/: Makefile  examples.c  examples.cpp  examples.h  main.c
geometry/: line.cpp  line.h  triangle.cpp
pbmtodots/: Makefile  pbmtodots.c  tag-raw.pbm  tag-text.pbm  verify.txt
rendering/: canvas.cpp  canvas.h  cell.cpp  cell.h  grid.cpp  grid.h  utils.cpp
rendering/geometry/: image.cpp  image.h
simulations/fluid/: particle.cpp  vec2d.cpp
src/: CMakeLists.txt  Makefile  constants.c  constants.h  dots  dots.c  examples.c  examples.h  grid.c  grid.h  main.c  main.cpp  renderer.c  renderer.h  unicode.c  unicode.h
src/rendering/geometry/: point.h
src/simulations/fluid/: particle.cpp  particle.h  particlesolver.cpp  particlesolver.h  vec2d.cpp  vec2d.h
test/: CMakeLists.txt  gtest.cpp  vec2dtests.cpp
